src/objects/Program_Device__c.object
<CustomObject>
    <fields>
        <fullName>Created_on_BOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This means that this record were create on BOM mass creation.</description>
        <label>Created On BOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Program Devices</relationshipLabel>
        <relationshipName>Program_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Devices</relationshipLabel>
        <relationshipName>Program_Devices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Source_Id__c , Source_Name__c )</formula>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <label>Program Device</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PGD-{0000000000}</displayFormat>
        <label>Program Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>